Fix layout and extra spaces

--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -24,3 +24,8 @@ nav ul li {
   margin-left: -2px;
   margin-right: 2rem;
 }
+
+.arrow{
+  color:red;
+
+}
